org.mmisw.ontmd Ontology Metadata Manager
Carlos Rueda - MMI / MBARI

ChangeLog

2009-03-13
	- Woking on http://code.google.com/p/mmisw/issues/detail?id=98:
	                "new version allows the shortName and authority to be changed"
	                
		- See OntMdServiceImpl._checkUriKeyCombinationForNewVersion
		
	                
2009-03-12
	- Fixed http://code.google.com/p/mmisw/issues/detail?id=63:
	                Matching auth+topic not detected as potential update
		- Added ontologyId attribute to the OntologyInfo class, such that the "review"
		  operation has access to it, and thus proceed with the appropriate check in
		  case ontologyId == null (meaning the review is for a *new* submission, not a
		  new version).
		  See OntMdServiceImpl._checkNoPreexistingOntology
		- Note, the _checkNoPreexistingOntology check is repeated in the "upload" operation
		  in case there is a new registration done by other user in the meantime (from when the
		  "review" was done). Of course, we are NOT completely solving the potential concurrency 
		  problem with this re-check; we are just reducing the chances of that event.

2009-03-11
	- Added sample.build.properties to be used as a template for the actual build.properties
	  (which is now removed from the SVN repository), and so facilitate build and deployment.
	  In particular, I'm using this approach to set up logging to an ontmd.log file under
	  the servlet container's logs directory. This follows the same strategy as in the
	  "ont" project for ontology and term URI resolution.
	- Using commons logging in server classes. 

		  

2009-03-10

	- Investigating http://code.google.com/p/mmisw/issues/detail?id=63:
	                Matching auth+topic not detected as potential update
	
		-Created a base vocabulary:
	      http://mmisw.org/ont/mmitest/20090310T221213/parametro


	- Fixed http://code.google.com/p/mmisw/issues/detail?id=97: 
	    Left and right borders are not displayed in firefox 